<resources>
    <string name="app_name" translatable="false">SMS Modem</string>
    <string name="colon_port" translatable="false">:%d</string>
    <string name="settings">Settings</string>
    <string name="enable">Turn on</string>
    <string name="disable">Turn off</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="messages_history">Messages history</string>
    <string name="subscribe">Subscribe</string>
    <string name="loading">Loading...</string>
    <string name="close_list_of_messages_history">Close list of messages</string>
    <string name="with_ip" translatable="false">IP %1$s:%2$s</string>
    <string name="sms_service_is_running">SMS Service is running</string>
    <string name="network_connection_unavailable">Network connection unavailable</string>
    <string name="email_subject">Email about SMS Modem, version %s</string>
    <string name="app_version">App version %s</string>
    <string name="unable_to_create_service_please_change_port_and_try_again">Unable to start service. Please, change PORT and try again!</string>
    <string name="main">Main</string>
    <string name="info">Info</string>
    <string name="messages">Messages</string>
    <string name="app_theme" translatable="false">App theme</string>
    <string name="rate_this_app" translatable="false">Rate this app</string>
    <string name="write_email_to_developers">Write email to developers</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
    <string name="url_must_begin_with_http_or_https">URL must begin with http:// or https://</string>
    <string name="unable_to_get_ip_address">Unable to get IP Address</string>
    <string name="service_will_stop_after_hours">Service will stop after %d hours</string>
    <string name="please_watch_ads_or_buy_a_subscription_to_continue_service_work">Please, watch ads or buy a subscription to continue service work</string>
    <string name="remind_later">Remind later</string>
    <string name="this_message_was_not_sent_to_the_server_tap_to_send">This message was not sent to the server. Tap to send.</string>
    <string name="remind_notification">Remind notification</string>
    <string name="service_settings">Service settings</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="_3_hours">3 hours</string>
    <string name="_6_hours">6 hours</string>
    <string name="_9_hours">9 hours</string>
    <string name="_12_hours">12 hours</string>
    <string name="delete_messages_history">Delete messages history</string>
    <string name="are_you_sure_it_will_delete_all_messages_on_message_screen">Are you sure? It will delete all messages on Message screen.</string>
    <string name="subscription_is_not_connected">Subscription is not connected</string>
    <string name="watch_ad">Watch ad</string>
    <string name="subscription_error">It means that you can use app only after watching ads. 2 full-screen ads give you 24 hours access to the app\'s functionality. You can accumulate access time up to 72 hours. Subscription removes these restrictions and removes ads from the app. To subscribe or view ads, click the buttons below</string>
    <string name="notification_settings_hint">Set the time until the end of the service, when a push notification will be sent to remind you to watch ads</string>
    <string name="ad">Ad</string>
    <string name="buy">Buy</string>
    <string name="app_requires_permissions">App requires permissions</string>
    <string name="this_app_is_made_primarily_for_startups_its_main_functionality_is_to_send_sms_messages_using_a_request_from_the_server_as_well_as_to_send_a_request_to_the_server_with_information_about_the_sms_message_that_came_to_the_phone_nthis_functionality_requires_access_to_receive_read_and_send_sms_messages_as_well_as_to_send_notifications_to_this_device_so_that_the_user_knows_when_the_application_is_running_nthese_permissions_will_be_requested_after_clicking_on_the_confirm_button">This app is made primarily for startups. Its main functionality is to send SMS messages using a request from the server, as well as to send a request to the server with information about the SMS message that came to the phone. This functionality requires access to receive, read and send SMS messages, as well as to send notifications to this device so that the user knows when the application is running. These permissions will be requested after clicking on the \'Confirm\' button.</string>
    <string name="please_note_you_are_not_connected_to_the_internet">Please note, you are probably not connected to the internet!</string>
    <string name="stop_service">Stop service</string>
    <string name="sms_modem_service_has_stopped_working">SMS Modem service has stopped working</string>
    <string name="choose_your_subscription_plan" translatable="false">Choose your subscription plan</string>
    <string name="annual" translatable="false">Annual</string>
    <string name="_3_months" translatable="false">3 Months</string>
    <string name="monthly" translatable="false">Monthly</string>
    <string name="subscribe_now" translatable="false">Subscribe Now</string>
    <string name="already_purchased" translatable="false">Already Purchased?</string>
    <string name="terms_conditions_underline" translatable="false"><u><![CDATA[Terms&Conditions]]></u></string>
    <string name="privacy_policy_underline" translatable="false"><u>Privacy Policy</u></string>
    <string name="terms_conditions" translatable="false"><![CDATA[Terms & Conditions]]></string>
    <string name="first_term" translatable="false">- SMS Modem subscription is billed monthly, seasonally (3-months) or annualy at the rate corresponding to the selected plan.</string>
    <string name="second_term" translatable="false">- Subscription auto-renews before the end of the current period, unless canceled 24-hours in advance.</string>
    <string name="third_term" translatable="false">- You may manage your subscriptions and turned off auto-renewal from your Google Play Store account settings.</string>
    <string name="forth_term" translatable="false">- If you cancel a subscription purchased from an app on Google Play, you will not receive a refund for the current billing period, but will continue to receive their subscription content for the remainder of the current billing period, regardless of the cancellation date. The cancellation goes into effect after the current billing period has passed.</string>
    <string name="hot" translatable="false">Hot</string>
    <string name="popular" translatable="false">Popular</string>
    <string name="sorry_this_section_is_not_available_yet">Sorry, this section is not available yet</string>
    <string name="how_to_use">How to use?</string>
    <string name="send_message_request">%1$s:%2$s/recipient\'s_cell_number/message_text</string>
    <string name="how_to_use_guide">On the main screen, you can see your IP address that your device is connected to and the port that you can configure yourself in settings. Using this IP address and port, you can send a request in the form of \'ip:port/recipient-phone-number/message-text\', and this message will be sent from your smartphone according to the data specified in the request. Also, the application can send a request to the server at the URL address you specify in the settings in the format \'your-URL-address/sender-phone-number/message-text/\'.</string>
    <string name="address_send_received_message">%1$s/Handynummer des Absenders/message_text</string>
    <string name="address_to_which_the_application_will_send_received_sms_messages">Address to which the application will send received SMS messages</string>
    <string name="your_request_to_send_an_sms_message">Your request to send an SMS message:</string>
    <string name="your_code_is_20">Your Code is 20%1$s</string>
    <string name="thanks_for_code">Thanks for code</string>
    <string name="enter_the_url_where_sms_will_be_sent">Enter the URL where SMS will be sent</string>
</resources>
